--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@propelauth/react": "^2.1.0",
+    "@react-oauth/google": "^0.13.0",
     "dependencies": "^0.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
